# tesseract_collision_coal

./: .gitignore  CLAUDE.md  D_ARC_COMPENSATION.md  GJK_CAST_SETTINGS_REPORT.md  REVIEW.md  STRING_PERF_BRIEF.md  ci.diff  dependencies.repos  dependencies_focal.repos  dependencies_with_ext.repos
.github/workflows/: benchmarking.yml  clang_format.yml  code_quality.yml  mac.yml  nightly.yml  ubuntu.yml  unstable.yml  windows.yml
tesseract/collision/: CMakeLists.txt  package.xml
tesseract/collision/coal/: CMakeLists.txt
tesseract/collision/coal/include/tesseract/collision/coal/: coal_cast_managers.h  coal_casthullshape.h  coal_collision_geometry_cache.h  coal_collision_object_wrapper.h  coal_discrete_managers.h  coal_factories.h  coal_utils.h
tesseract/collision/coal/src/: coal_cast_managers.cpp  coal_casthullshape.cpp  coal_collision_geometry_cache.cpp  coal_collision_object_wrapper.cpp  coal_discrete_managers.cpp  coal_factories.cpp  coal_utils.cpp
tesseract/collision/test/: CMakeLists.txt  collision_box_box_cast_unit.cpp  collision_box_box_unit.cpp  collision_box_capsule_unit.cpp  collision_box_cone_unit.cpp  collision_box_cylinder_unit.cpp  collision_box_sphere_unit.cpp  collision_cast_cctype_unit.cpp  collision_cast_disable_during_sweep_unit.cpp  collision_cast_scenario_unit.cpp  collision_clone_unit.cpp  collision_compound_compound_unit.cpp  collision_compound_mesh_cast_shape_id_unit.cpp  collision_compound_mesh_sphere_unit.cpp  collision_core_unit.cpp  collision_large_dataset_unit.cpp  collision_mesh_mesh_unit.cpp  collision_multi_shape_cast_unit.cpp  collision_multi_threaded_unit.cpp  collision_octomap_cast_static_update_unit.cpp  collision_octomap_cast_unit.cpp  collision_octomap_mesh_unit.cpp  collision_octomap_octomap_unit.cpp  collision_octomap_sphere_unit.cpp  collision_octomap_usage_unit.cpp  collision_sphere_sphere_cast_unit.cpp  collision_sphere_sphere_unit.cpp  contact_managers_config_unit.cpp  contact_managers_factory_static_unit.cpp  contact_managers_factory_unit.cpp
tesseract/collision/test/benchmarks/: CMakeLists.txt  bullet_discrete_bvh_benchmarks.cpp  bullet_discrete_simple_benchmarks.cpp  coal_discrete_bvh_benchmarks.cpp  collision_profile.cpp  fcl_discrete_bvh_benchmarks.cpp
tesseract/collision/test/coal/: coal_cache_pair_unit.cpp  coal_cast_gradient_quality_unit.cpp  coal_cast_manager_branches_unit.cpp  coal_casthullshape_behavior_unit.cpp  coal_casthullshape_unit.cpp  coal_collision_geometry_cache_unit.cpp  coal_collision_object_wrapper_unit.cpp  coal_d_arc_compensation_unit.cpp  coal_deferred_octree_expansion_unit.cpp  coal_gjk_guess_threshold_unit.cpp  coal_utils_shape_conversion_unit.cpp  coal_vs_bullet_convex_cast_unit.cpp
tesseract/collision/test_suite/: CMakeLists.txt
tesseract/collision/test_suite/include/tesseract/collision/test_suite/: collision_box_box_cast_unit.hpp  collision_box_box_unit.hpp  collision_box_capsule_unit.hpp  collision_box_cone_unit.hpp  collision_box_cylinder_unit.hpp  collision_box_sphere_unit.hpp  collision_cast_cctype_unit.hpp  collision_cast_disable_during_sweep_unit.hpp  collision_cast_scenario_unit.hpp  collision_clone_unit.hpp  collision_compound_compound_unit.hpp  (+15 more)
tesseract/collision/test_suite/include/tesseract_collision/test_suite/: collision_octomap_cast_unit.hpp  collision_octomap_octomap_unit.hpp
tesseract_collision/: CMakeLists.txt  package.xml
tesseract_collision/coal/: CMakeLists.txt
tesseract_collision/coal/include/tesseract_collision/coal/: coal_cast_managers.h  coal_casthullshape.h  coal_casthullshape_utility.h  coal_collision_geometry_cache.h  coal_collision_object_wrapper.h  coal_discrete_managers.h  coal_factories.h  coal_utils.h
tesseract_collision/coal/src/: coal_cast_managers.cpp  coal_casthullshape.cpp  coal_casthullshape_utility.cpp  coal_collision_geometry_cache.cpp  coal_collision_object_wrapper.cpp  coal_discrete_managers.cpp  coal_factories.cpp  coal_utils.cpp
tesseract_collision/hpp_fcl/: CMakeLists.txt
tesseract_collision/hpp_fcl/include/tesseract_collision/hpp_fcl/: hpp_fcl_collision_object_wrapper.h  hpp_fcl_discrete_managers.h  hpp_fcl_factories.h  hpp_fcl_utils.h
tesseract_collision/hpp_fcl/src/: hpp_fcl_collision_object_wrapper.cpp  hpp_fcl_discrete_managers.cpp  hpp_fcl_utils.cpp
tesseract_collision/test/: CMakeLists.txt  collision_box_box_cast_unit.cpp  collision_box_box_unit.cpp  collision_box_capsule_unit.cpp  collision_box_cone_unit.cpp  collision_box_cylinder_unit.cpp  collision_box_sphere_unit.cpp  collision_clone_unit.cpp  collision_compound_compound_unit.cpp  collision_compound_mesh_sphere_unit.cpp  collision_mesh_mesh_unit.cpp  collision_multi_threaded_unit.cpp  collision_octomap_sphere_unit.cpp  collision_sphere_sphere_cast_unit.cpp  collision_sphere_sphere_unit.cpp  contact_managers_config_unit.cpp  contact_managers_factory_static_unit.cpp  contact_managers_factory_unit.cpp
tesseract_collision/test/benchmarks/: CMakeLists.txt  coal_discrete_bvh_benchmarks.cpp  collision_profile.cpp  hpp_fcl_discrete_bvh_benchmarks.cpp
tesseract_collision/test/coal/: coal_casthullshape_unit.cpp
tesseract_collision/test_suite/: CMakeLists.txt
tesseract_collision/test_suite/include/tesseract_collision/: collision_compound_mesh_sphere_unit.hpp
tesseract_collision/test_suite/include/tesseract_collision/test_suite/: collision_box_box_cast_unit.hpp  collision_box_box_unit.hpp  collision_box_capsule_unit.hpp  collision_box_cone_unit.hpp  collision_box_cylinder_unit.hpp  collision_box_sphere_unit.hpp  collision_clone_unit.hpp  collision_compound_compound_unit.hpp  collision_compound_mesh_sphere_unit.hpp  collision_large_dataset_unit.hpp  collision_mesh_mesh_unit.hpp  collision_multi_threaded_unit.hpp  collision_octomap_mesh_unit.hpp  collision_octomap_octomap_unit.hpp  collision_octomap_sphere_unit.hpp  collision_sphere_sphere_cast_unit.hpp  collision_sphere_sphere_unit.hpp  contact_manager_config_unit.hpp
tesseract_collision/test_suite/include/tesseract_collision/test_suite/benchmarks/: large_dataset_benchmarks.hpp  primatives_benchmarks.hpp
(+2 files in other folders)
